--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,29 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>me.galaxy</groupId>
-    <artifactId>java-web-template</artifactId>
+    <artifactId>framework-all</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <packaging>pom</packaging>
+
+    <modules>
+        <module>framework-web</module>
+        <module>framework-registry</module>
+    </modules>
+
+    <properties>
+        <java.version>1.8</java.version>
+        <springboot.version>2.0.0.RELEASE</springboot.version>
+    </properties>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${springboot.version}</version>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
