--- a/framework-config/pom.xml
+++ b/framework-config/pom.xml
@@ -11,20 +11,13 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>framework-web</artifactId>
+    <artifactId>framework-config</artifactId>
 
     <dependencies>
 
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <version>${springboot.version}</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-config-server</artifactId>
             <version>${springboot.version}</version>
         </dependency>
 
