:sparkles: [Config] 增加基础配置

--- a/framework-config/src/main/resources/application.yml
+++ b/framework-config/src/main/resources/application.yml
@@ -6,4 +6,5 @@ spring:
     config:
       server:
         git:
-          uri: https://github.com/galaxy-captain/java-web-template/blob/master/framework-config/src/main/resources/my.properties
+          uri: https://github.com/galaxy-captain/java-web-template
+          search-paths: /master/framework-config/src/main/resources/my.properties
