--- a/framework-gateway/pom.xml
+++ b/framework-gateway/pom.xml
@@ -11,13 +11,15 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>framework-rpc</artifactId>
+    <artifactId>framework-gateway</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-hystrix</artifactId>
+            <artifactId>spring-cloud-starter-gateway</artifactId>
+            <version>${springboot.version}</version>
         </dependency>
+
     </dependencies>
 
 </project>
