--- a/framework-http/pom.xml
+++ b/framework-http/pom.xml
@@ -19,7 +19,6 @@
             <groupId>me.galaxy</groupId>
             <artifactId>framework-core</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <optional>true</optional>
         </dependency>
 
         <dependency>
@@ -31,7 +30,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <optional>true</optional>
         </dependency>
 
         <dependency>
@@ -42,7 +40,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
-            <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-hystrix</artifactId>
         </dependency>
 
     </dependencies>
