--- a/framework-rpc/pom.xml
+++ b/framework-rpc/pom.xml
@@ -14,10 +14,18 @@
     <artifactId>framework-rpc</artifactId>
 
     <dependencies>
+
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>3.10.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
