--- a/framework-web/pom.xml
+++ b/framework-web/pom.xml
@@ -16,6 +16,18 @@
     <dependencies>
 
         <dependency>
+            <groupId>me.galaxy</groupId>
+            <artifactId>framework-foundation</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>me.galaxy</groupId>
+            <artifactId>framework-http</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
@@ -28,18 +40,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>me.galaxy</groupId>
-            <artifactId>framework-http</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>me.galaxy</groupId>
-            <artifactId>framework-core</artifactId>
-            <version>1.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
