--- a/framework-web/src/main/resources/application.yml
+++ b/framework-web/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 server:
-  port: 8080
+  port: 8001
 
-feign:
-  http:
-    connect-timeout: 10000
-    read-timeout: 10000
-    write-timeout: 10000
-    max-idle: 10
-    max-alive: 60000
+http:
+  client:
+    connection-request-timeout:
+    connect-timeout:
+    socket-timeout: 30000
+    pool-total-max: 512
+    pool-route-max: 64
