增加注册中心

--- a/framework-registry/pom.xml
+++ b/framework-registry/pom.xml
@@ -13,6 +13,18 @@
 
     <artifactId>framework-registry</artifactId>
 
+    <dependencies>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-consul-discovery</artifactId>
+        </dependency>
+
+    </dependencies>
 
 </project>
