--- a/pom.xml
+++ b/pom.xml
@@ -4,15 +4,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <!-- Essential Version -->
-    <!-- SpringCloud - Finchley.RELEASE -->
-    <!-- SpringBoot  - 2.0.3.RELEASE    -->
+    <!-- SpringCloud - Greenwich.SR2 -->
+    <!-- SpringBoot  - 2.1.0.RELEASE -->
 
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-starter-parent</artifactId>
-        <version>Finchley.RELEASE</version>
+        <version>Greenwich.SR2</version>
     </parent>
 
     <groupId>me.galaxy</groupId>
@@ -39,7 +39,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <springcloud.version>Finchley.RELEASE</springcloud.version>
-        <springboot.version>2.0.3.RELEASE</springboot.version>
+        <springboot.version>2.1.0.RELEASE</springboot.version>
     </properties>
 
     <dependencies>
@@ -145,6 +145,28 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${springboot.version}</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>3.0.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
